--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,10 @@
+<nav class="navbar fixed-top navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/images/purple-stars.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    {{title}}
+  </a>
+</nav>
+
 <h2>Login</h2>
 <form action="/login" method="POST">
   <label>
@@ -11,3 +18,11 @@
   <button type="submit">Login</button>
 </form>
 <a href="/signup">Sign up here</a>
+
+<footer class="footer fixed-bottom">
+  <div class="container">
+    <span> Route APP |
+      <br> Copyright © 2020 Ionhack
+    </span>
+  </div>
+</footer>
