--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -1,8 +1,12 @@
-<h2>Where do you want to go?</h2>
+<nav class="navbar fixed-top navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/images/purple-stars.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    Where do you want to go?
+  </a>
+</nav>
+
 
 <div id="map"></div>
-<!--<button type="submit" onclick="showMarkers({{markers}})">Show Markers</button>-->
-<!--<button type="submit" onclick="calcRoute()">Route</button>-->
 <div>
   <form id="routeSearchForm" action="/route-search" method="POST">
     <label for="start">
@@ -11,51 +15,58 @@
     <label for="end">
       <input type="text" id="end" name="end" placeholder="destination">
     </label>
-    <button id="add-route">Add route</button>
-    <button id="clear-route">Clear route</button>
-    <button id="clear-markers">Clear markers</button>
-    <button id="get-current-location">Get current location</button>
-    <button type="submit" id="show-street-art">Show Street Art</button>
-    <label>
-      <p>Save route to favorites:
-        <input class="updates" type="text" name="favoriteName"></p>
-    </label>
-    <button type="submit" id="save-route">Save to favorites</button>
+    <button class="btn btn-primary btn-sm" id="add-route">Add route</button>
+    <button class="btn btn-primary btn-sm" id="clear-route">Clear route</button>
+    <button class="btn btn-primary btn-sm" id="clear-markers">Clear markers</button>
+    <button class="btn btn-primary btn-sm" id="get-current-location">Get current location</button>
+    <button class="btn btn-primary btn-lg" type="submit" id="show-street-art">Show Street Art</button>
+    <div class="save-favorites">
+      <label>
+        <p>Save route to favorites:
+          <input class="updates" type="text" name="favoriteName" required></p>
+      </label>
+      <button class="btn btn-secondary btn-sm" type="submit" id="save-route">Save to favorites</button>
+      <a href="/streetarts">List of street art</a>
+      <a href="/streetarts/create">Create a new street art point</a>
+    </div>
   </form>
-
-
-  <a href="/streetarts">List of street art</a>
-  <a href="/streetarts/create">Create a new street art point</a>
-
-
 </div>
-<div>
+
+<div class="btn-group-toggle" data-toggle="buttons">
   <form action="#" id="placesForm" method="GET">
     <input type="checkbox" id="restaurants" name="restaurants">
-    <label for="restaurants">Restaurants</label>
+    <label class="btn btn-primary active" for="restaurants">Restaurants</label>
     <input type="checkbox" id="bars" name="bars">
-    <label for="bars">Bars</label>
+    <label class="btn btn-primary active" for="bars">Bars</label>
     <input type="checkbox" id="bakeries" name="bakeries">
-    <label for="bakeries">Bakeries</label>
+    <label class="btn btn-primary active" for="bakeries">Bakeries</label>
     <input type="checkbox" id="supermarket" name="supermarkets">
-    <label for="supermarket">Supermarket</label>
+    <label class="btn btn-primary active" for="supermarket">Supermarket</label>
     <input type="checkbox" id="tourist_attraction" name="touristAttractions">
-    <label for="tourist_attraction">Viewpoints</label>
+    <label class="btn btn-primary active" for="tourist_attraction">Viewpoints</label>
     <input type="checkbox" id="art_gallery" name="artGalleries">
-    <label for="art_gallery">Art Gallery</label>
-    <button type="submit">Search Places</button>
+    <label class="btn btn-primary active" for="art_gallery">Art Gallery</label>
+    <button class="btn btn-primary btn-lg" type="submit">Search Places</button>
   </form>
 </div>
-{{#each favorites}}
-<div class="favorite">
-  <h4>{{favoriteName}}</h4>
-  <p>{{start}}
-    {{end}}</p>
-  <form action="/route-search/{{_id}}" method="POST">
-    <button type="submit" id="delete-route">Delete favorite </button>
-  </form>
 </div>
-{{/each}}
+
+<div>
+  {{#each favorites}}
+  <div class="col-sm-4">
+    <div class="card" style="width: 14rem;">
+      <div class="card-body">
+        <h6 class="card-title">{{favoriteName}}</h6>
+        <p>{{start}}</p>
+        <p> {{end}}</p>
+        <form action="/route-search/{{_id}}" method="POST">
+          <button class="btn btn-secondary btn-sm" type="submit" id="delete-route">Delete favorite </button>
+        </form>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+</div>
 
 <script>
   let markers = [];
