--- a/views/streetarts-list.hbs
+++ b/views/streetarts-list.hbs
@@ -1,15 +1,21 @@
-<h1>Lisbon's Best Street Art</h1>
-<ul>
-  {{#each streetarts}}
-  <li>
-    <p><img src={{imageUrl}} class="card-img-top" alt={{title}}></p>
-    <p>{{name_description}}</p>
-    <p>by: {{artist}}</p>
-    <a href="/streetarts/{{_id}}">See details</a>
-    <a href="/streetarts/{{_id}}/edit">Edit</a>
-    <form action="/streetarts/{{_id}}/delete" method="POST">
-      <button type="submit">Delete</button>
-    </form>
-  </li>
-  {{/each}}
-</ul>
+<div class="container">
+  <h1 class="details-title">Lisbon's Best Street Art</h1>
+  <div class="row">
+    {{#each streetarts}}
+    <div class="col-sm-4">
+      <div class="card" style="width: 22rem;">
+        <img src={{imageUrl}} class="card-img-top" alt={{title}}>
+        <div class="card-body">
+          <h5 class="card-title">{{name_description}}</h5>
+          <p>by: {{artist}}</p>
+          <a href="/streetarts/{{_id}}">See details</a>
+          <a href="/streetarts/{{_id}}/edit">Edit</a>
+          <form action="/streetarts/{{_id}}/delete" method="POST">
+            <button type="submit">Delete</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    {{/each}}
+  </div>
+</div>
