--- a/views/streetarts-details.hbs
+++ b/views/streetarts-details.hbs
@@ -1,5 +1,5 @@
-<h1>{{streetart.name_description}}</h1>
-<p><img src={{streetart.imageUrl}} class="card-img-top" alt={{streetart.name_description}}>
+<h1 class="details-title">{{streetart.name_description}}</h1>
+<p><img src={{streetart.imageUrl}} class="graffiti" alt={{streetart.name_description}}>
   <hr>
 
 <p>Art by:{{streetart.artist}}</p>
