--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,4 +9,12 @@ a {
   height: 500px;
   width: 100%; }
 
+#login-page {
+  background-image: url("../images/lisbon.mp4");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  z-index: -1; }
+
 /*# sourceMappingURL=style.css.map */
