--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,8 +7,18 @@ a {
   color: #00B7FF;
 }
 
-
 #map {
   height: 500px;
   width: 100%;
+}
+
+
+
+#login-page {
+  background-image: url('../images/lisbon.mp4');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  z-index: -1;
 }
