--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,18 +1,20 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-{{#unless user}}
-<a href="/signup" id="signup">Sign Up</a>
-{{/unless}}
+<div class="login-page">
+  <h1>{{title}}</h1>
+  <p>Welcome to {{title}}</p>
+  {{#unless user}}
+  <a href="/signup" id="signup">Sign Up</a>
+  {{/unless}}
 
-{{#if user}}
-<p>Welcome back, {{user.username}}</p>
-<a href="/route-search">Choose your Route</a>
-<form method="POST" action="/logout">
-  <button type="submit">Logout</button>
-</form>
-<!--<a href="/private">Private</a>-->
-{{!-- <a href="/logout">log out</a> --}}
-<!-- <a href="/zomato">Zomato</a>-->
-{{else}}
-<a href="/login">Log In</a>
-{{/if}}
+  {{#if user}}
+  <p>Welcome back, {{user.username}}</p>
+  <a href="/route-search">Choose your Route</a>
+  <form method="POST" action="/logout">
+    <button type="submit">Logout</button>
+  </form>
+  <!--<a href="/private">Private</a>-->
+  {{!-- <a href="/logout">log out</a> --}}
+  <!-- <a href="/zomato">Zomato</a>-->
+  {{else}}
+  <a href="/login">Log In</a>
+  {{/if}}
+</div>
