--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -131,7 +131,7 @@
   function showartmarkers() {
     event.preventDefault()
     getstreetart().then(() => {
-      streetarts.forEach(function (element) {
+      streetarts.forEach((element) => {
         const markerStreetart = new google.maps.Marker({
           position: new google.maps.LatLng(Number(element.lat), Number(element.lng)),
           map: map,
@@ -139,9 +139,10 @@
           animation: google.maps.Animation.DROP
         });
         let contentString =
-          `<a href=${`/streetarts/{{element._id}}/edit`}> 
+          `<a href=/streetarts/${element.id}> 
 				<div class='info__container'>
-					<div class='info__text'>	
+					<div class='info__text'>
+            <img width=50 height=50 src = ${element.imageUrl} >	
 						<h3 class='info__text__title'>${element.name_description}</h3> 
 						<h5 class='info__text__subtitle'>${element.artist}</h5>
 					</div>
@@ -159,7 +160,7 @@
         });
         markerStreetartarray.push(markerStreetart)
       })
-      console.log(markerStreetartarray)
+      //console.log(markerStreetartarray)
     })
 
   }
@@ -204,7 +205,8 @@
     // console.log('marker', marker);
     let customMarker = new google.maps.Marker({
       position: marker,
-      map: map
+      map: map,
+      animation: google.maps.Animation.DROP
     });
     const infowindow = new google.maps.InfoWindow({
       content: name,
