--- a/views/streetarts-create.hbs
+++ b/views/streetarts-create.hbs
@@ -1,8 +1,13 @@
 <h1>Located great street art? Add it here! </h1>
+
 <form action="/streetarts/create" method="POST">
   <label>
+    Picture
+    <input type="file" name="image">
+  </label>
+  <label>
     Artist
-    <input type="text" name="picture">
+    <input type="text" name="artist">
   </label>
   <label>
     Name or Description
@@ -31,9 +36,6 @@
     Comment
     <textarea name="comment" cols="30" rows="4"></textarea>
   </label>
-  {{!-- <label>
-    Picture
-    <input type="text" name="picture">
-  </label> --}}
+
   <button type="submit">Create</button>
 </form>
