--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,30 +1,36 @@
+<link rel="stylesheet" href='/stylesheets/style.css' />
+<video autoplay loop muted id="background">
+  <source src="https://res.cloudinary.com/dt9z4xs6m/video/upload/v1605824975/movie/lisbon_uqch1o.mp4" type="video/mp4">
+</video>
+
 <nav class="navbar fixed-top navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="/images/purple-stars.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     {{title}}
   </a>
 </nav>
-
-<h2>Sign Up</h2>
-<form action="/signup" method="POST">
-  <label>
-    Username
-    <input type="text" name="username" placeholder="Your username" required>
-  </label>
-  <label>
-    Email
-    <input type="email" name="email" placeholder="Your email">
-  </label>
-  <label>
-    Password
-    <input type="password" name="password" placeholder="Your password" required>
-  </label>
-  <button type="submit">Create account</button>
-  {{#if errorMessage}}
-  <div class="error">{{errorMessage}}</div>
-  {{/if}}
-</form>
-
+<div class="box">
+  <h2>Sign Up</h2>
+  <form action="/signup" method="POST">
+    <div class="inputBox">
+      <input type="text" name="username" placeholder="Enter Username">
+      <label>Username</label>
+    </div>
+    <div class=" inputBox">
+      <input type="text" name="email" placeholder="Enter Email">
+      <label>Email</label>
+    </div>
+    <div class=" inputBox">
+      <input type="password" name="password" placeholder="··········">
+      <label>Password</label>
+    </div>
+    <input type="submit" value="Submit">
+    <button id="input-style">Create account</button>
+    {{#if errorMessage}}
+    <div class="error">{{errorMessage}}</div>
+    {{/if}}
+  </form>
+</div>
 <footer class="footer fixed-bottom">
   <div class="container">
     <span> Route APP |
