--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,7 +44,8 @@
 
 {{else}}
 <div class="login-signup">
-  <button class="btn btn-info" <a href="/login">Log In</a>
+
+  <button class="btn btn-info"> <a href="/login">Log In</a>
 </div>
 <footer class="footer fixed-bottom">
   <div class="container">
