street art infowindow fixed

--- a/views/streetarts-create.hbs
+++ b/views/streetarts-create.hbs
@@ -11,7 +11,7 @@
   </label>
   <label>
     Name or Description
-    <textarea name="name_description" cols="30" rows="4"></textarea>
+    <textarea name="name_description" cols="30" rows="2"></textarea>
   </label> <br>
 
   <label>
@@ -34,8 +34,12 @@
 
   <label>
     Comment
-    <textarea name="comment" cols="30" rows="4"></textarea>
+    <textarea name="comment" cols="30" rows="2"></textarea>
   </label>
 
   <button type="submit">Create</button>
 </form>
+<br>
+<a href="/route-search">Back to route map</a>
+<br>
+<a href="/streetarts">List of all street art</a>
