--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -153,7 +153,7 @@
           `<a href=/streetarts/${element.id}> 
 				<div class='info__container'>
 					<div class='info__text'>
-            <img width=75 height=75 src = ${element.imageUrl} >	
+            <img width=200 height=150 src = ${element.imageUrl} >	
 						<h3 class='info__text__title'>${element.name_description}</h3> 
 						<h5 class='info__text__subtitle'>${element.artist}</h5>
 					</div>
@@ -163,7 +163,7 @@
         //streetarts.push(markerStreetart);
         const infowindow = new google.maps.InfoWindow({
           content: contentString,
-
+          maxWidth: 250,
         });
         map.setZoom(13);
         markerStreetart.addListener("click", () => {
