--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,7 +28,7 @@
 {{#if user}}
 <div class="login-signup">
   <p>Welcome back, {{user.username}}</p>
-  <input type="submit" value="Submit">
+  {{!-- <input type="submit" value="Submit"> --}}
   <button class="choose-route"><a href="/route-search">Choose your Route</a>
     <form method="POST" action="/logout">
       <button type="submit">Logout</button>
