--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -31,7 +31,7 @@
     {{/if}}
   </form>
 </div>
-<footer class="footer fixed-bottom">
+<footer class="footer relative-bottom">
   <div class="container">
     <span> Route APP |
       <br> Copyright © 2020 Ionhack
