--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,13 +16,7 @@
   <h1>Welcome to {{title}}</h1>
   <button class="btn btn-success"></button><a href="/signup" id="signup">Sign Up</a></button>
 </div>
-<footer class="footer fixed-bottom">
-  <div class="container">
-    <span> Route APP |
-      <br> Copyright © 2020 Ionhack
-    </span>
-  </div>
-</footer>
+
 {{/unless}}
 
 {{#if user}}
@@ -34,7 +28,7 @@
       <button type="submit">Logout</button>
     </form>
 </div>
-<footer class="footer fixed-bottom">
+<footer class="footer relative-bottom">
   <div class="container">
     <span> Route APP |
       <br> Copyright © 2020 Ionhack
@@ -47,7 +41,7 @@
 
   <button class="btn btn-info"> <a href="/login">Log In</a>
 </div>
-<footer class="footer fixed-bottom">
+<footer class="footer relative-bottom">
   <div class="container">
     <span> Route APP |
       <br> Copyright © 2020 Ionhack
