--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,25 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin-top: 20px !important;
-  margin-bottom: 100px; }
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
 
 #map {
   height: 500px;
-  width: 100%; }
+  width: 98%;
+  display: block;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto; }
 
 .save-favorites {
-  margin-top: 150px;
+  margin-top: 80px;
   justify-content: center;
   bottom: 13vw; }
 
 .map-routes {
   position: relative;
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   justify-content: center; }
 
@@ -25,10 +27,20 @@ a {
   position: relative;
   display: flex;
   justify-content: center;
-  bottom: 13vw; }
+  bottom: 8vw; }
+
+#show-street-art {
+  position: relative;
+  bottom: 4px; }
+
+#search-places-btn {
+  position: relative;
+  left: 10px;
+  bottom: 4px;
+  background-color: #00B7FF !important; }
 
 .favorite-cards {
-  margin-top: 150px; }
+  margin-top: 50px; }
 
 .label-start {
   position: relative;
@@ -54,10 +66,24 @@ a {
 .col-sm-4 {
   margin-bottom: 20px !important; }
 
+#background {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+#street-art-a1 {
+  background-color: #00B7FF !important; }
+
+#street-art-a2 {
+  background-color: #00B7FF !important; }
+
+#save-route {
+  background-color: #00B7FF !important; }
+
 footer {
   width: 110% !important;
-  margin-left: -80px !important;
-  margin-top: 350px;
+  margin-left: -130px !important;
+  margin-top: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #292929;
