--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,9 @@
 body {
-  
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin-top: 20px !important;
-  margin-bottom: 100px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; 
+  // background-image: url("/downloads/background 1.jpeg") !important;
+  // background-size: contain;
+  // width: 100%;
+  // height: 100%;
 }
 
 a {
@@ -11,18 +12,23 @@ a {
 
 #map {
   height: 500px;
-  width: 100%;
+  width: 98%;
+  display: block;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .save-favorites {
-  margin-top: 150px;
-
+  margin-top: 80px;
   justify-content: center;
   bottom: 13vw;
 }
+
+
 .map-routes {
   position: relative;
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
@@ -31,15 +37,28 @@ a {
   position: relative;
   display: flex;
   justify-content: center;
-  bottom: 13vw;
+  bottom: 8vw;
 }
 
-#show-street-art {
-  
+ #show-street-art {
+   position: relative;
+ bottom: 4px;
+
 }
+
+
+#search-places-btn {
+  position: relative;
+  left: 10px;
+  bottom: 4px;
+  background-color: #00B7FF !important;
+}
+
+
+
 
 .favorite-cards {
- margin-top: 150px;
+ margin-top: 50px;
 }
 
 .label-start {
@@ -71,10 +90,28 @@ a {
   margin-bottom: 20px!important;
 }
 
+#background {
+  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#street-art-a1 {
+  background-color: #00B7FF !important; 
+}
+
+#street-art-a2 {
+  background-color: #00B7FF !important;
+}
+
+#save-route {
+  background-color: #00B7FF !important;
+}
   footer {
     width: 110% !important;
-    margin-left: -80px !important;
-    margin-top: 350px;
+    margin-left: -130px !important;
+    margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #292929;
