--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -27,7 +27,7 @@
   <a href="/signup">Sign up here</a>
 </div>
 
-<footer class="footer fixed-bottom">
+<footer class="footer relative-bottom">
   <div class="container">
     <span> Route APP |
       <br> Copyright © 2020 Ionhack
