--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,4 +113,19 @@ footer {
   text-decoration: none;
   text-shadow: 0px 1px 0px #528009; }
 
+.create-button {
+  box-shadow: 0px 0px 0px 2px #3dc21b;
+  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+  background-color: #44c767;
+  border-radius: 10px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 19px;
+  padding: 12px 37px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627; }
+
 /*# sourceMappingURL=style.css.map */
