--- a/views/streetarts-create.hbs
+++ b/views/streetarts-create.hbs
@@ -5,35 +5,36 @@
       <div class="form-group row ml-10">
         <label>
           Select Your Picture
-          <input type="file" id="piclass=" form-control" name="image">
+          <input type="file" class="form-control space-between" name="image">
         </label>
         <label>
           Artist
-          <input type="text" class="form-control" name="artist">
+          <input type="text" class="form-control space-between" name="artist">
         </label>
         <label>
           Name or Description
-          <textarea name="name_description" class="form-control" cols="30" rows="2"></textarea>
+          <textarea name="name_description" class="form-control space-between" cols="30" rows="2"></textarea>
         </label>
         <label>
           Address
-          <input type="double" class="form-control" name="address">
+          <input type="double" class="form-control space-between" name="address">
         </label>
         <label>
           Latitude
-          <input type="double" class="form-control" name="latitude">
+          <input type="double" class="form-control space-between" name="latitude">
         </label>
         <label>
           Longitude
-          <input type="double" class="form-control" name="longitude">
+          <input type="double" class="form-control space-between" name="longitude">
         </label>
         <label>
           Other Location Notes
-          <input type="text" class="form-control" name="other_location_note" value="{{streetart.other_location_note}}">
+          <input type="text" class="form-control space-between" name="other_location_note"
+            value="{{streetart.other_location_note}}">
         </label>
         <label>
           Comment
-          <textarea name="comment" class="form-control" cols="30" rows="2"></textarea>
+          <textarea name="comment" class="form-control space-between" cols="30" rows="2"></textarea>
         </label>
       </div>
       <button type="submit" class="create-button">Create</button>
