--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar relative-top navbar-light bg-light">
+<nav class="navbar fixed-top navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="/images/purple-stars.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     Where do you want to go?
@@ -7,33 +7,33 @@
 
 
 <div id="map"></div>
-<div class="map-routes">
+<div>
   <form id="routeSearchForm" action="/route-search" method="POST">
     <label for="start">
-      <input type="text" class="label-start" id="start" name="start" placeholder="starting point">
+      <input type="text" id="start" name="start" placeholder="starting point">
     </label>
     <label for="end">
-      <input type="text" class="label-end" id="end" name="end" placeholder="destination">
+      <input type="text" id="end" name="end" placeholder="destination">
     </label>
     <button class="btn btn-primary btn-sm" id="add-route">Add route</button>
     <button class="btn btn-primary btn-sm" id="clear-route">Clear route</button>
     <button class="btn btn-primary btn-sm" id="clear-markers">Clear markers</button>
     <button class="btn btn-primary btn-sm" id="get-current-location">Get current location</button>
+    <button class="btn btn-primary btn-lg" type="submit" id="show-street-art">Show Street Art</button>
     <div class="save-favorites">
       <label>
         <p>Save route to favorites:
           <input class="updates" type="text" name="favoriteName" required></p>
       </label>
-      <button class="btn btn-primary btn-sm" type="submit" id="save-route">Save to favorites</button>
-      <a class="btn btn-primary btn-sm" id="street-art-a1" href="/streetarts">List of street art</a>
-      <a class="btn btn-primary btn-sm" id="street-art-a2" href="/streetarts/create">Create a new street art point</a>
+      <button class="btn btn-secondary btn-sm" type="submit" id="save-route">Save to favorites</button>
+      <a href="/streetarts">List of street art</a>
+      <a href="/streetarts/create">Create a new street art point</a>
     </div>
   </form>
 </div>
 
-<div id="places-buttons" class="btn-group-toggle" data-toggle="buttons">
+<div class="btn-group-toggle" data-toggle="buttons">
   <form action="#" id="placesForm" method="GET">
-    <button class="btn btn-primary" type="submit" id="show-street-art">Show Street Art</button>
     <input type="checkbox" id="restaurants" name="restaurants">
     <label class="btn btn-primary active" for="restaurants">Restaurants</label>
     <input type="checkbox" id="bars" name="bars">
@@ -46,21 +46,21 @@
     <label class="btn btn-primary active" for="tourist_attraction">Viewpoints</label>
     <input type="checkbox" id="art_gallery" name="artGalleries">
     <label class="btn btn-primary active" for="art_gallery">Art Gallery</label>
-    <button id="search-places-btn" class="btn btn-primary" type="submit">Search Places</button>
+    <button class="btn btn-primary btn-lg" type="submit">Search Places</button>
   </form>
 </div>
+</div>
 
-
-<div id="save-favorite" class="container card-group ">
+<div>
   {{#each favorites}}
-  <div class="col-sm-3" style="margin-bottom: 2em;">
-    <div class="card " style="width: 14rem; min-height:14rem;">
-      <div class="card-body ">
-        <h6 class="card-title ">{{favoriteName}}</h6>
+  <div class="col-sm-4">
+    <div class="card" style="width: 14rem;">
+      <div class="card-body">
+        <h6 class="card-title">{{favoriteName}}</h6>
         <p>{{start}}</p>
         <p> {{end}}</p>
         <form action="/route-search/{{_id}}" method="POST">
-          <button class="btn btn-secondary btn-sm " type="submit" id="delete-route">Delete favorite </button>
+          <button class="btn btn-secondary btn-sm" type="submit" id="delete-route">Delete favorite </button>
         </form>
       </div>
     </div>
